# DecisionCenter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/edr/: README.md  __init__.py  app.py  config.py  llm.py
docs/: GO_LIVE_PLAN.md  PRE_START_IMPLEMENTATION_PLAN.md  README.md
docs/admin/: CONTROL_PLANE_LOCK.md  FEATURE_MATRIX.md
docs/ai/: AGENT_HANDOFF.md  SHARED_CONTEXT.md  agent-state.json  failure-modes.md  task-template.md
docs/approvals/: report_approval_policy.md
docs/config/: project_source_mapping.example.json  project_source_mapping.json
docs/contracts/: email_graph_contract.md  microsoft_graph_contract.md  odoo_api_contract.md  owncloud_webdav_contract.md
docs/design/: PHASE_1I_UI_CONTRACT.md  README.md  UI_CONTRACT_v1.md
docs/evaluation/: edr_goldenset.md  edr_metrics.md  edr_test_cases.md
docs/execution/: CURRENT_PROJECT_STATE.md  IMPLEMENTATION_PHASES.md  PHASE_1A_SCOPE.md  PHASE_1C_PREREQUISITES.md  PHASE_1D_FIXUP_REPORT.md  PHASE_1E_REPORT.md  PHASE_1F_REPORT.md  PHASE_1G_REPORT.md  PHASE_1H_REPORT.md  PHASE_1I_PLAN.md  PHASE_1I_REPORT.md  PHASE_2A_PLAN.md  PHASE_2A_REPORT.md  PHASE_2B_PLAN.md  PHASE_2B_REPORT.md  PHASE_2C_PLAN.md  PHASE_2C_REPORT.md  PHASE_2D_EXECUTION_PLAN.md  PHASE_2D_NEXT_STEPS_PLAN.md  PHASE_2D_SLICE_2_REPORT.md  PHASE_2D_SLICE_3_REPORT.md  PHASE_2D_SLICE_4_REPORT.md  PHASE_2D_SLICE_5_REPORT.md  PHASE_2D_SLICE_6_REPORT.md  SPEC_CHANGE_2026-05-31_owner_operator_model.md
docs/operations/: CONNECTORS_CONNECTION_GUIDE.md  README.md  backup_restore.md  cost_model.md  deployment_overrides.md  entra_auth_validation.md  hosting.md  observability.md  production_hardening_checklist.md  runbook.md  uat_runbook.md
docs/policies/: conflict_resolution_policy.md  data_minimization_policy.md  disaster_recovery_policy.md  email_retrieval_policy.md  evidence_priority_policy.md  odoo_financial_truth_policy.md  prompt_injection_policy.md  rbac_policy.md  secrets_policy.md  shared_mailbox_access_policy.md
docs/schemas/: audit-log.schema.json  evidence-object.schema.json  evidence-pack.schema.json  executive-decision-report.schema.json  quality-gate-result.schema.json
docs/security/: rbac_matrix.md
docs/templates/: executive-decision-report.template.md
docs/workflows/: EDR-AGENTIC-RAG-v2.1.md
frontend/: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: accessibility.spec.ts  entra-expiry.spec.ts  golden-path.spec.ts  performance.spec.ts  responsive.spec.ts  security-dom.spec.ts
frontend/scripts/: check-bundle-size.mjs
frontend/src/: App.tsx  index.css  main.tsx  (+1 more)
n8n/: README.md  email_search.json  odoo_read.json  owncloud_list.json  sharepoint_search.json
scripts/: README.md  agent_postflight.py  agent_preflight.py  backup_minio.py  backup_postgres.py  bind_n8n_webhook_auth.py  check_ai_context.py  check_doc_drift.py  check_hardening.py  deploy_n8n_odoo_read.py  init_minio.py  init_qdrant.py  phase2a_e2e_validation.py  probe_live_integrations.py  repair_n8n_webhooks.py  restore_minio.py  restore_postgres.py  runtime_verify_abcd.py  uat_check.py  uat_flow.py  validate_deepseek_provider.py  validate_entra_auth.py  verify_backup.py
(+267 files in other folders)
