[project]
name = "decision-center"
version = "0.1.0"
description = "Internal AI Decision Center for evidence-backed executive reports."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.0",
  "pydantic==2.8.0",
  "pydantic-settings==2.4.0",
  "httpx==0.27.0",
  "langgraph==0.2.0",
  "qdrant-client==1.11.0",
  "redis==5.0.0",
  "minio==7.2.0",
  "langfuse==2.50.0",
  "python-dotenv==1.0.0",
  # Identity / JWT — CVE-driven upgrade from 2.7.0 / 41.0.7
  "PyJWT==2.10.1",
  "cryptography==44.0.0",
  # Report exporters (Phase A)
  "python-docx==1.1.0",
  "openpyxl==3.1.0",
  "reportlab==4.2.0",
  "python-pptx==1.0.0",
  # Phase 1D — Retrieval
  "voyageai==0.3.2",
  "cohere==5.11.4",
  "tiktoken==0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.0.0",
  "ruff==0.6.0",
  "pip-audit==2.7.3",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["apps/edr/tests"]
